@@ -2226,4 +2226,10 @@ mRemoteNG will now quit and begin with the installation.</value>
   <data name="strMenuSessionRetrieve" xml:space="preserve">
     <value>Retrieve</value>
   </data>
+  <data name="strPuttySessionSettings" xml:space="preserve">
+    <value>PuTTY Session Settings</value>
+  </data>
+  <data name="strErrorCouldNotLaunchPutty" xml:space="preserve">
+    <value>PuTTY could not be launched.</value>
+  </data>
 </root>
